# wasmre

./: Cargo.toml  README  README.md  rustfmt.toml
src/: cli.rs  main.rs
src/bytes/: mod.rs  module.rs  section.rs  types.rs
src/diagnostics/: format_syntax_error.rs  format_type_error.rs  mod.rs  reporter.rs
src/lexer/: lexer.rs  mod.rs  tokens.rs
src/parser/: ast.rs  mod.rs  parser.rs
src/utils/: mod.rs  range.rs
tests/playground/: add.wat  arithmetic.wat  factorial.wat  hello.wat  store_and_load.wat  use_external_add.wat
